--- a/README
+++ b/README
@@ -4,10 +4,12 @@ git clone https://github.com/sehnpaa/five-in-a-row/
 cd five-in-a-row
 git config --global user.email "you@example.com"
 git config --global user.name "Your Name"
-# Configure vim as well
+# Configure vim
 
 
-# make changes to files
+## Make changes 
+git pull
+## Edit files
 git add .
 git status
 git commit -m "commit message"
@@ -17,3 +19,6 @@ git push origin master
 # Revert last commit
 git revert HEAD
 git push origin master
+
+# Delete file
+git rm
