update README - adding -u to 'push'

--- a/README
+++ b/README
@@ -18,7 +18,7 @@ git push origin master
 
 # Revert last commit
 git revert HEAD
-git push origin master
+git push -u origin master
 
 # Delete file
 git rm
