Revert "Documentation: vim and indent configuration"
This reverts commit c4d06379847d87bd1bf22706315b37f522f7bae7.

--- a/README
+++ b/README
@@ -10,8 +10,7 @@ npm install -g gulp
 npm install --save-dev gulp.js
 npm install --save-dev gulp-jshint
 npm install --save-dev gulp-qunit
-# indent with 4 spaces, for instance with vim:   
-cp -n .vimrc ~/
+# Configure vim
 
 
 ## Make changes 
