--- a/README
+++ b/README
@@ -7,7 +7,8 @@ git config --global user.email "you@example.com"
 git config --global user.name "Your Name"
 # gulp.js
 npm install -g gulp
-npm install --save-dev gulp.js
+npm install --save-dev gulp
+npm install --save-dev gulp-util
 npm install --save-dev gulp-jshint
 npm install --save-dev gulp-qunit
 # Configure vim
